# my-dots

./: .gitignore  CMakeLists.txt  README.md  install.sh
programs/bash/: .bashrc
programs/bash/themes/: qt.bash
scripts/: confirm_overwrite.sh  helpers.bash  store.sh
src/dotcop/: main.cpp
